# BIDCI

./: .gitignore  README.md  pyproject.toml  test.py
src/bcivis/manager/: core.py
src/bidci/config/: __init__.py  config_model.py  motor_imagery_ds003810.yaml
src/bidci/io/: loader.py
src/bidci/manager/: core.py
src/bidci/preprocessing/: cleaning_pipeline.py
src/bidci/tasks/: motor_imagery.py
src/bidci/utils/: helpers.py
src/bidci/vis/: visualization.py
