[project]
name = "bidci"
version = "0.1.0"
description = "BIDCI: EEG preprocessing and visualization tools for BCI experiments."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Niv Cohen" }
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


